--- a/backend/.env
+++ b/backend/.env
@@ -6,17 +6,17 @@ DJANGO_DEBUG=True
 HOST=localhost
 
 # # Database settings 
-# POSTGRES_HOST=aws-0-eu-west-3.pooler.supabase.com
-# POSTGRES_DB=postgres
-# POSTGRES_PASSWORD=8Qa0YhQX6w0nhLxm
-# POSTGRES_PORT=6543
-# POSTGRES_USER=postgres.eghjglwzywacxtnkvmpj
+POSTGRES_HOST=aws-0-eu-west-3.pooler.supabase.com
+POSTGRES_DB=postgres
+POSTGRES_PASSWORD=8Qa0YhQX6w0nhLxm
+POSTGRES_PORT=6543
+POSTGRES_USER=postgres.eghjglwzywacxtnkvmpj
 
-POSTGRES_USER="ps_db_user"
-POSTGRES_DB="ps_db_name"
-POSTGRES_PASSWORD="ps_db_password123456"
-POSTGRES_HOST="localhost"
-POSTGRES_PORT="5432"
+# POSTGRES_USER="ps_db_user"
+# POSTGRES_DB="ps_db_name"
+# POSTGRES_PASSWORD="ps_db_password123456"
+# POSTGRES_HOST="localhost"
+# POSTGRES_PORT="5432"
 
 # Redis settings (for production)
 REDIS_HOST=redis
