--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_BASE_URL=https://localhost/api
-NEXT_PUBLIC_WS_URL=wss://localhost
+NEXT_PUBLIC_API_BASE_URL=https://ft-transcendence-ludg.onrender.com
+NEXT_PUBLIC_WS_URL=wss://ft-transcendence-ludg.onrender.com
