--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_BASE_URL=https://api.pongarcadia.me
+NEXT_PUBLIC_API_BASE_URL=https://api.pongarcadia.me/api
 NEXT_PUBLIC_WS_URL=wss://api.pongarcadia.me
